manifests/argo/netpol-sensor.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sensor
  namespace: argo
spec:
  endpointSelector:
    matchExpressions:
      - key: sensor-name
        operator: In
        values:
          - tofu-cloudflare
          - upgrade-k8s
          - pxe-sync
          - talos-build
          - images-build
          - single-repo-build
          - alert-investigate
          - task-dispatch
  ingressDeny:
    - fromEntities:
        - world
  egress:
    - toEndpoints:
        - matchLabels:
            eventbus-name: default
      toPorts:
        - ports:
            - port: "4222"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: argo-workflows-server
      toPorts:
        - ports:
            - port: "2746"
              protocol: TCP
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
